# litellm

./: .dockerignore  .env.example  .gitignore  AAWM-PATCHES.md  AGENTS.md  CLAUDE.md  COMPLETED.md  Dockerfile  Dockerfile.dev  GEMINI.md  LOCAL_EMBED_RERANK_CONSUMER.md  LOCAL_LLM_CONSUMER.md  Makefile  OPENROUTER_EMBED_RERANK_CONSUMER.md  PATCHES.md  PROD_RELEASE.md  README.md  TEST_HARNESS.md  TODO.md  WHEEL.md  docker-compose.dev.yml  docker-compose.yml  litellm-config.yaml  litellm-dev-config.yaml  model_prices_and_context_window.json  pyproject.toml  requirements-aawm.txt  ruff.toml  suggestion.md  test-dev-callback.sh
.analysis/: completed.md  google-anthropic-system-prompt-policy-2026-04-27.md  gpt55-claude-read-pages-empty-arg-2026-04-27.md  investigations.md  teacher-dataset-capture-revised-2026-04-27.md  todo.deferred.md  todo.md
.analysis/investigation/: investigate-codex-019e8570-3cb3-75c3-ada6-8b7165e5e335.md  investigate-codex-019e8570-4259-7a60-851a-00cc1ed2233d.md  investigate-codex-019e857b-9e88-7f53-90f9-acef3062b597.md  investigate-codex-019e8590-7116-7cf2-8e47-52b5b64edd33.md  investigate-codex-019e8598-eda4-7401-b419-bbf3276f0f3a.md  investigate-codex-019e85db-7bd6-7e61-8ff0-b93d7e5440f2.md
.control-plane-wheel-build/: pyproject.toml
.github/workflows/: aawm-artifact-autobump.yml  aawm-callback.yml  aawm-config.yml  aawm-control-plane.yml  aawm-harness.yml  aawm-publish.yml  auto_update_price_and_context_window.yml  check-schema-sync.yml  check_duplicate_issues.yml  codeql.yml  codspeed.yml  create_daily_staging_branch.yml  ghcr_deploy.yml  ghcr_helm_deploy.yml  helm_unit_test.yml  issue-keyword-labeler.yml  label-component.yml  llm-translation-testing.yml  main.yml  publish-migrations.yml  publish_enterprise.yml  publish_proxy_extras.yml  read_pyproject_version.yml  regenerate-poetry-lock.yml  reset_stable.yml  run_observatory_tests.yml  scan_duplicate_issues.yml  scorecard.yml  simple_pypi_publish.yml  stale.yml  sync-schema.yml  test-linting.yml  test-litellm-matrix.yml  test-litellm-ui-build.yml  test-litellm.yml  test-mcp.yml  test-model-map.yaml  test-proxy-e2e-azure-batches.yml  test-unit-caching-redis.yml  test-unit-core-utils.yml  (+14 more)
.release-build/cp/: aawm_litellm_control_plane-0.0.3-py3-none-any.whl
.wheel-build/: pyproject.toml
.wheel-build/aawm_litellm_callbacks/: __init__.py  aawm_agent_quality_rules.py  agent_identity.py
.wheel-build/aawm_litellm_callbacks.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ci_cd/: check_files_match.py
docker/: Dockerfile.non_root  Dockerfile.provider_status_observations  install_auto_router.sh
docs/: aawm-model-output-replay.md  aawm-oauth-credential-maintenance.md  aawm-provider-status-observations.md  aawm-runtime-error-logs.md  aawm-session-history.md
docs/implemented/: 2026-07-plan-aawm-alias-config-framework.md
docs/my-website/: sidebars.js
litellm/: __init__.py  _lazy_imports_registry.py  _logging.py  _version.py  bundled_model_prices_and_context_window_fallback.json  constants.py  cost_calculator.py  main.py  model_prices_and_context_window_backup.json  router.py  utils.py
litellm/caching/: caching_handler.py  llm_caching_handler.py  redis_cache.py
litellm/integrations/: aawm_agent_identity.py  aawm_agent_quality_rules.json  aawm_agent_quality_rules.py  aawm_passthrough_shape_capture.py  aawm_payload_capture.py  aawm_session_history_sql.py  custom_logger.py  langsmith.py  opentelemetry.py
litellm/litellm_core_utils/: core_helpers.py  exception_mapping_utils.py  get_litellm_params.py  get_llm_provider_logic.py  get_model_cost_map.py  health_check_helpers.py  litellm_logging.py  logging_worker.py
litellm/passthrough/: utils.py
litellm/proxy/: _types.py  aawm_alias_routing_redis.py  aawm_route_logging.py  aawm_runtime_error_logging.py  common_request_processing.py  health_check.py  litellm_pre_call_utils.py  proxy_server.py  route_llm_request.py  utils.py
litellm/rerank_api/: main.py
litellm/responses/: function_name_sanitization.py  streaming_iterator.py
litellm/secret_managers/: credential_error_sanitizer.py  credential_file_lock.py  credential_file_metadata.py  credential_file_write.py
litellm/types/: utils.py
scripts/: aawm-provider-status-observations.service  aawm-provider-status-observations.timer  antigravity_oauth_refresh.py  apply_aawm_alias_routing_audit_2026_06_06.sql  apply_rate_limit_intervals_mview_2026_05_23.sql  apply_rate_limit_intervals_mview_2026_06_03_antigravity.sql  apply_rate_limit_observation_billing_detail_2026_06_14.sql  apply_session_history_agent_id_2026_06_15.sql  apply_session_history_config_change_flags_2026_06_02.sql  apply_session_history_host_attribution_2026_07_06.sql  apply_session_history_inbound_model_alias_2026_06_14.sql  apply_session_history_tool_definition_snapshots_2026_06_12.sql  backfill_claude_auto_review_session_history.py  backfill_local_cli_session_history.py  backfill_provider_error_observations_from_docker_logs.py  backfill_rate_limit_observations.py  backfill_session_history.py  backfill_session_history_latency.py  backfill_session_history_runtime_identity.py  build_model_config_bundle.py  bump_aawm_artifact_versions.py  codex_oauth_refresh.py  grok_oidc_refresh.py  kimi_oauth_refresh.py  migrate_xai_oauth_credential.py  record_provider_status_observations.py  repair_session_history_provider_cache.py  repair_session_history_repository_identity.py  run_provider_status_observations_loop.py  score_agent_trace_quality.py  sync_aawm_agent_identity_to_wheel.py  sync_aawm_agent_quality_rules_to_wheel.py  verify_target_runtime_release.py  write_tailscale_self_snapshot.py  xai_oauth_refresh.py
scripts/dev-smoke/: model_output_replay.py
scripts/local-ci/: README.md  anthropic_adapter_config.json  build_harness_bundle.py  claude_acceptance_prompt.txt  (+12 more)
tests/: test_presidio_latency.py
(+470 files in other folders)
