[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "aawm-litellm-control-plane"
version = "0.0.5"
description = "AAWM LiteLLM Claude control-plane overlay for prompt rewrites and dynamic injection"
requires-python = ">=3.10"
dependencies = ["litellm"]

[tool.hatch.build.targets.wheel]
only-include = []

[tool.hatch.build.targets.wheel.force-include]
"../litellm/proxy/pass_through_endpoints/aawm_claude_control_plane.py" = "litellm/proxy/pass_through_endpoints/aawm_claude_control_plane.py"
"../context-replacement/claude-code/2.1.110/auto-memory-replacement.md" = "litellm/proxy/pass_through_endpoints/aawm_claude_control_plane_data/claude-code/2.1.110/auto-memory-replacement.md"
"../context-replacement/claude-code/prompt-patches/roman01la-2026-04-02.json" = "litellm/proxy/pass_through_endpoints/aawm_claude_control_plane_data/claude-code/prompt-patches/roman01la-2026-04-02.json"
