[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aawm-litellm-callbacks"
version = "0.0.58"
description = "AAWM LiteLLM callback for Langfuse enrichment and session history"
requires-python = ">=3.10"
dependencies = ["litellm"]

[project.optional-dependencies]
dev = ["build"]

[tool.setuptools.package-data]
aawm_litellm_callbacks = ["aawm_agent_quality_rules.json"]
