[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "aawm-litellm-callbacks"
version = "0.0.66"
description = "AAWM LiteLLM callback for Langfuse enrichment and session history"
requires-python = ">=3.10"
dependencies = ["litellm"]

[project.optional-dependencies]
dev = ["build"]

# Single-source packaging for agent_identity (RR-003):
# the published wheel force-includes the canonical integration module so the
# package tree does not maintain a second full copy of the ~21k-line file.
# The thin checkout loader under aawm_litellm_callbacks/agent_identity.py is
# overwritten at wheel build time by this mapping.
[tool.hatch.build.targets.wheel]
packages = ["aawm_litellm_callbacks"]

[tool.hatch.build.targets.wheel.force-include]
"../litellm/integrations/aawm_agent_identity.py" = "aawm_litellm_callbacks/agent_identity.py"

[tool.hatch.build.targets.sdist.force-include]
"../litellm/integrations/aawm_agent_identity.py" = "aawm_litellm_callbacks/agent_identity.py"
