[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "aawm-litellm-callbacks"
version = "0.0.68"
description = "AAWM LiteLLM callback for Langfuse enrichment and session history"
requires-python = ">=3.10"
dependencies = ["litellm"]

[project.optional-dependencies]
dev = ["build"]

# Single-source packaging (RR-003 + RR-006):
# - force-include canonical agent_identity into the callback package
# - force-include aawm_session_history package modules + sql shim under the
#   litellm.integrations namespace so the wheel-installed agent_identity
#   can import package-owned writer/sql/record without a dual-maintained copy
# The thin checkout loader under aawm_litellm_callbacks/agent_identity.py is
# overwritten at wheel build time by the agent_identity mapping.
[tool.hatch.build.targets.wheel]
packages = ["aawm_litellm_callbacks"]

[tool.hatch.build.targets.wheel.force-include]
"../litellm/integrations/aawm_agent_identity.py" = "aawm_litellm_callbacks/agent_identity.py"
"../litellm/integrations/aawm_session_history/__init__.py" = "litellm/integrations/aawm_session_history/__init__.py"
"../litellm/integrations/aawm_session_history/runtime.py" = "litellm/integrations/aawm_session_history/runtime.py"
"../litellm/integrations/aawm_session_history/writer.py" = "litellm/integrations/aawm_session_history/writer.py"
"../litellm/integrations/aawm_session_history/spool.py" = "litellm/integrations/aawm_session_history/spool.py"
"../litellm/integrations/aawm_session_history/retry.py" = "litellm/integrations/aawm_session_history/retry.py"
"../litellm/integrations/aawm_session_history/record.py" = "litellm/integrations/aawm_session_history/record.py"
"../litellm/integrations/aawm_session_history/sql.py" = "litellm/integrations/aawm_session_history/sql.py"
"../litellm/integrations/aawm_session_history/identity_selection.py" = "litellm/integrations/aawm_session_history/identity_selection.py"
"../litellm/integrations/aawm_session_history_sql.py" = "litellm/integrations/aawm_session_history_sql.py"

[tool.hatch.build.targets.sdist.force-include]
"../litellm/integrations/aawm_agent_identity.py" = "aawm_litellm_callbacks/agent_identity.py"
"../litellm/integrations/aawm_session_history/__init__.py" = "litellm/integrations/aawm_session_history/__init__.py"
"../litellm/integrations/aawm_session_history/runtime.py" = "litellm/integrations/aawm_session_history/runtime.py"
"../litellm/integrations/aawm_session_history/writer.py" = "litellm/integrations/aawm_session_history/writer.py"
"../litellm/integrations/aawm_session_history/spool.py" = "litellm/integrations/aawm_session_history/spool.py"
"../litellm/integrations/aawm_session_history/retry.py" = "litellm/integrations/aawm_session_history/retry.py"
"../litellm/integrations/aawm_session_history/record.py" = "litellm/integrations/aawm_session_history/record.py"
"../litellm/integrations/aawm_session_history/sql.py" = "litellm/integrations/aawm_session_history/sql.py"
"../litellm/integrations/aawm_session_history/identity_selection.py" = "litellm/integrations/aawm_session_history/identity_selection.py"
"../litellm/integrations/aawm_session_history_sql.py" = "litellm/integrations/aawm_session_history_sql.py"
